🎧 Improve audio player positioning to avoid navigation conflicts
✨ Audio Player Enhancements:
- Moved from bottom-right to bottom-left to avoid nav overlap
- Reduced z-index from 1050 to 995 for proper layering
- Added smart positioning for navigation conflicts
- Enhanced mobile responsiveness with center positioning option

🎯 User Experience Improvements:
- No more overlap with floating navigation menu
- Better visual hierarchy with proper z-index stacking
- Improved accessibility on mobile devices
- Professional positioning that doesn't interfere with other UI

🎨 Technical Changes:
- Bottom-left default positioning (left: 24px)
- Smart nav-active class for dynamic positioning
- Mobile-first responsive design improvements
- Maintains all audio player functionality and features

Ready for enhanced stakeholder experience without UI conflicts.

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -755,7 +755,7 @@
         .audio-control-panel {
             position: fixed;
             bottom: 24px;
-            right: 24px;
+            left: 24px;
             background: rgba(12, 35, 75, 0.95);
             border-radius: 20px;
             box-shadow: 
@@ -766,7 +766,7 @@
             color: white;
             max-width: 400px;
             min-width: 340px;
-            z-index: 1050;
+            z-index: 995;
             backdrop-filter: blur(16px) saturate(180%);
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             font-family: 'Inter', sans-serif;
@@ -780,6 +780,18 @@
                 0 25px 50px rgba(12, 35, 75, 0.4),
                 0 12px 24px rgba(0, 0, 0, 0.2),
                 inset 0 1px 0 rgba(255, 255, 255, 0.15);
+        }
+
+        /* Smart positioning to avoid navigation conflicts */
+        .audio-control-panel.nav-active {
+            bottom: 24px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 995;
+        }
+
+        .audio-control-panel.nav-active:hover {
+            transform: translateX(-50%) translateY(-4px) scale(1.02);
         }
 
         .audio-control-panel.minimized {
@@ -1122,13 +1134,40 @@
         @media (max-width: 480px) {
             .audio-control-panel {
                 bottom: 12px;
-                right: 12px;
                 left: 12px;
+                right: 12px;
+                z-index: 995;
+            }
+
+            .audio-control-panel.nav-active {
+                bottom: 12px;
+                left: 12px;
+                right: 12px;
+                transform: none;
+            }
+
+            .audio-control-panel.nav-active:hover {
+                transform: translateY(-2px) scale(1.01);
             }
 
             .audio-main-controls .btn {
                 min-width: 55px;
                 padding: 0.4rem 0.2rem;
+            }
+        }
+
+        /* Tablet and medium screens */
+        @media (min-width: 481px) and (max-width: 1024px) {
+            .audio-control-panel.nav-active {
+                bottom: 24px;
+                left: 50%;
+                transform: translateX(-50%);
+                max-width: 380px;
+                right: auto;
+            }
+
+            .audio-control-panel.nav-active:hover {
+                transform: translateX(-50%) translateY(-4px) scale(1.02);
             }
         }
 
