Fix projected impact metrics to match original document
- Updated 40-60% traffic increase to specify 12-month timeframe
- Aligned meta description and feature content with README projections
- Enhanced disclaimer to include industry benchmarks reference
- Ensures landing page accurately reflects original strategy document

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAGC Digital Strategy - Transform Enrollment Challenges into Growth</title>
-    <meta name="description" content="Discover how UAGC can achieve 40-60% traffic increases through data-driven strategy. Features real student success stories and prioritized high-ROI recommendations.">
+    <meta name="description" content="Discover how UAGC can achieve 40-60% traffic increases over 12 months through data-driven strategy. Features real student success stories and prioritized high-ROI recommendations.">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -469,7 +469,7 @@
             </div>
             <div class="feature enhanced">
                 <h3>📊 Data-Driven Recovery Plan</h3>
-                <p>SEO audit reveals 40-60% traffic increase opportunities with specific program optimizations</p>
+                <p>SEO audit reveals 40-60% traffic increase opportunities over 12 months with specific program optimizations</p>
                 <span class="feature-badge">Proven Results</span>
             </div>
             <div class="feature enhanced">
@@ -485,7 +485,7 @@
             <div class="metrics-grid">
                 <div class="metric">
                     <div class="metric-number">40-60%</div>
-                    <div class="metric-label">Traffic Increase</div>
+                    <div class="metric-label">Traffic Increase (12 months)</div>
                 </div>
                 <div class="metric">
                     <div class="metric-number">24.75%</div>
@@ -496,7 +496,7 @@
                     <div class="metric-label">Implementation Timeline</div>
                 </div>
             </div>
-            <p class="disclaimer">*Projections based on current top-performing programs and competitor analysis</p>
+            <p class="disclaimer">*12-month projections based on current top-performing programs, competitor analysis, and industry benchmarks</p>
         </div>
         
         <!-- Second Student Story -->
