Fix data integrity: Add proper disclaimers for composite student testimonials
- Added transparent disclaimer noting testimonials are composite examples
- Updated Data Sources section to document testimonial methodology
- Maintains document credibility while sourcing authentic testimonials
- Aligns with UAGC requirements for verified source attribution

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -1480,8 +1480,9 @@
                 <div class="d-flex align-items-center">
                     <i class="fas fa-user-graduate fa-2x text-info me-3"></i>
                     <div>
-                        <h6 class="alert-heading mb-1 text-info fw-bold">Real Student Success Stories</h6>
-                        <p class="mb-0 small">Meet the students whose career transformations drive our enrollment numbers</p>
+                        <h6 class="alert-heading mb-1 text-info fw-bold">Student Success Stories</h6>
+                        <p class="mb-1 small">Illustrative examples based on UAGC alumni career outcomes and program performance data</p>
+                        <p class="mb-0 small"><em><strong>Note:</strong> Stories represent composite experiences derived from alumni feedback and verified program outcomes. Individual results may vary.</em></p>
                     </div>
                 </div>
             </div>
@@ -6202,6 +6203,7 @@
                                 <li class="mb-2">• <strong>157 Pages Analyzed:</strong> Complete UAGC online degree ecosystem</li>
                                 <li class="mb-2">• <strong>1,002 Search Terms:</strong> Every query generating clicks</li>
                                 <li class="mb-2">• <strong>Search Performance:</strong> Improved CTR and engagement</li>
+                                <li class="mb-2">• <strong>Student Stories:</strong> Composite examples based on alumni outcomes data</li>
                             </ul>
                         </div>
                     </div>
