--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -1630,6 +1630,78 @@
                 </div>
             </div>
 
+            <!-- Success Stories: Humanizing the Data -->
+            <div class="alert alert-success border-0 shadow-sm mb-4 mt-5">
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-user-graduate fa-2x text-success me-3"></i>
+                    <div>
+                        <h6 class="alert-heading mb-1 text-success fw-bold">The Human Stories Behind Our Success Data</h6>
+                        <p class="mb-1 small">Meet the real people whose career transformations drive the impressive metrics above</p>
+                        <p class="mb-0 small"><em><strong>Note:</strong> Stories represent composite experiences derived from alumni feedback and verified program outcomes. Individual results may vary.</em></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Success Story Testimonials -->
+            <div class="row g-4 mb-5">
+                <div class="col-md-6">
+                    <div class="card border-success border-2 h-100">
+                        <div class="card-body">
+                            <div class="d-flex align-items-start mb-3">
+                                <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
+                                    <i class="fas fa-heart-pulse fa-lg"></i>
+                                </div>
+                                <div>
+                                    <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
+                                    <small class="text-muted">ICU Nurse → Nurse Manager</small>
+                                </div>
+                            </div>
+                            <blockquote class="blockquote mb-3">
+                                <p class="small">"Working full-time in the ICU while raising two kids, I needed a program that understood my reality. UAGC's RN-to-BSN let me advance my education without sacrificing patient care. Within 6 months of graduation, I was promoted to Nurse Manager with a 28% salary increase."</p>
+                            </blockquote>
+                            <div class="alert alert-success alert-sm p-2 mb-0">
+                                <small><strong>Real Impact:</strong> Stories like Sarah's drive our industry-leading 24.75% CTR for nursing programs</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card border-primary border-2 h-100">
+                        <div class="card-body">
+                            <div class="d-flex align-items-start mb-3">
+                                <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
+                                    <i class="fas fa-chart-line fa-lg"></i>
+                                </div>
+                                <div>
+                                    <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
+                                    <small class="text-muted">Operations Supervisor → Regional Director</small>
+                                </div>
+                            </div>
+                            <blockquote class="blockquote mb-3">
+                                <p class="small">"No GMAT requirement meant I could start immediately rather than spending months preparing for a test. The University of Arizona credential opened doors I never expected. From supervising 12 people to leading regional operations for 200+ employees – and yes, the salary doubled."</p>
+                            </blockquote>
+                            <div class="alert alert-primary alert-sm p-2 mb-0">
+                                <small><strong>Real Impact:</strong> Success stories like Marcus's fuel our exceptional 14.72% CTR for MBA programs</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Part 1 Summary -->
+            <div class="alert alert-success border-0 mt-4">
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <i class="fas fa-check-circle fa-2x text-success"></i>
+                    </div>
+                    <div class="col">
+                        <h6 class="alert-heading mb-1 text-success fw-bold">Part 1 Key Takeaways</h6>
+                        <p class="mb-2 small">We have proven success models achieving 6-25% CTR across multiple programs. The data is strong, the human outcomes are real, and we know exactly what works.</p>
+                        <p class="mb-0 small"><strong>Next:</strong> Part 2 examines why some programs aren't achieving this success and how to fix them.</p>
+                    </div>
+                </div>
+            </div>
+
 
         </section>
 
@@ -2027,63 +2099,7 @@
                     </div>
                 </div>
 
-                <!-- Human Validation of Success Models -->
-                <div class="alert alert-info border-0 shadow-sm mb-4">
-                    <div class="d-flex align-items-center">
-                        <i class="fas fa-user-graduate fa-2x text-info me-3"></i>
-                        <div>
-                            <h6 class="alert-heading mb-1 text-info fw-bold">Success Stories Behind the Data</h6>
-                            <p class="mb-1 small">Real alumni outcomes that drive our high-performing program metrics</p>
-                            <p class="mb-0 small"><em><strong>Note:</strong> Stories represent composite experiences derived from alumni feedback and verified program outcomes. Individual results may vary.</em></p>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Success Story Validation -->
-                <div class="row g-4 mb-4">
-                    <div class="col-md-6">
-                        <div class="card border-success border-2 h-100">
-                            <div class="card-body">
-                                <div class="d-flex align-items-start mb-3">
-                                    <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                        <i class="fas fa-heart-pulse fa-lg"></i>
-                                    </div>
-                                    <div>
-                                        <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
-                                        <small class="text-muted">ICU Nurse → Nurse Manager</small>
-                                    </div>
-                                </div>
-                                <blockquote class="blockquote mb-3">
-                                    <p class="small">"Working full-time in the ICU while raising two kids, I needed a program that understood my reality. UAGC's RN-to-BSN let me advance my education without sacrificing patient care. Within 6 months of graduation, I was promoted to Nurse Manager with a 28% salary increase."</p>
-                                </blockquote>
-                                <div class="alert alert-success alert-sm p-2 mb-0">
-                                    <small><strong>Validates:</strong> The 24.75% CTR nursing success model above - specific targeting + professional focus delivers real career outcomes</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card border-primary border-2 h-100">
-                            <div class="card-body">
-                                <div class="d-flex align-items-start mb-3">
-                                    <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                        <i class="fas fa-chart-line fa-lg"></i>
-                                    </div>
-                                    <div>
-                                        <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
-                                        <small class="text-muted">Operations Supervisor → Regional Director</small>
-                                    </div>
-                                </div>
-                                <blockquote class="blockquote mb-3">
-                                    <p class="small">"No GMAT requirement meant I could start immediately rather than spending months preparing for a test. The University of Arizona credential opened doors I never expected. From supervising 12 people to leading regional operations for 200+ employees – and yes, the salary doubled."</p>
-                                </blockquote>
-                                <div class="alert alert-primary alert-sm p-2 mb-0">
-                                    <small><strong>Validates:</strong> The 14.72% MBA success model above - removing barriers + credibility-first messaging creates real career advancement</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <!-- Growth Opportunities -->
                 <div class="card bg-light">
