--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -1630,63 +1630,7 @@
                 </div>
             </div>
 
-            <!-- Success Stories: Humanizing the Data -->
-            <div class="alert alert-success border-0 shadow-sm mb-4 mt-5">
-                <div class="d-flex align-items-center">
-                    <i class="fas fa-user-graduate fa-2x text-success me-3"></i>
-                    <div>
-                        <h6 class="alert-heading mb-1 text-success fw-bold">The Human Stories Behind Our Success Data</h6>
-                        <p class="mb-1 small">Meet the real people whose career transformations drive the impressive metrics above</p>
-                        <p class="mb-0 small"><em><strong>Note:</strong> Stories represent composite experiences derived from alumni feedback and verified program outcomes. Individual results may vary.</em></p>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Success Story Testimonials -->
-            <div class="row g-4 mb-5">
-                <div class="col-md-6">
-                    <div class="card border-success border-2 h-100">
-                        <div class="card-body">
-                            <div class="d-flex align-items-start mb-3">
-                                <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                    <i class="fas fa-heart-pulse fa-lg"></i>
-                                </div>
-                                <div>
-                                    <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
-                                    <small class="text-muted">ICU Nurse → Nurse Manager</small>
-                                </div>
-                            </div>
-                            <blockquote class="blockquote mb-3">
-                                <p class="small">"Working full-time in the ICU while raising two kids, I needed a program that understood my reality. UAGC's RN-to-BSN let me advance my education without sacrificing patient care. Within 6 months of graduation, I was promoted to Nurse Manager with a 28% salary increase."</p>
-                            </blockquote>
-                            <div class="alert alert-success alert-sm p-2 mb-0">
-                                <small><strong>Real Impact:</strong> Stories like Sarah's drive our industry-leading 24.75% CTR for nursing programs</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card border-primary border-2 h-100">
-                        <div class="card-body">
-                            <div class="d-flex align-items-start mb-3">
-                                <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                    <i class="fas fa-chart-line fa-lg"></i>
-                                </div>
-                                <div>
-                                    <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
-                                    <small class="text-muted">Operations Supervisor → Regional Director</small>
-                                </div>
-                            </div>
-                            <blockquote class="blockquote mb-3">
-                                <p class="small">"No GMAT requirement meant I could start immediately rather than spending months preparing for a test. The University of Arizona credential opened doors I never expected. From supervising 12 people to leading regional operations for 200+ employees – and yes, the salary doubled."</p>
-                            </blockquote>
-                            <div class="alert alert-primary alert-sm p-2 mb-0">
-                                <small><strong>Real Impact:</strong> Success stories like Marcus's fuel our exceptional 14.72% CTR for MBA programs</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <!-- Part 1 Summary -->
             <div class="alert alert-success border-0 mt-4">
@@ -2721,6 +2665,140 @@
                                     <span class="badge bg-secondary">🎯 Audience-Targeted</span>
                 </div>
                     </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Student Success Story Templates -->
+                <div class="card border-info shadow-sm mb-4">
+                    <div class="card-header bg-info text-white">
+                        <h6 class="mb-0 fw-bold">📝 Content Strategy: Student Success Story Templates</h6>
+                        <small class="opacity-75">Strategic templates for authentic testimonial collection and content creation</small>
+                    </div>
+                    <div class="card-body">
+                        <div class="alert alert-warning border-0 mb-4">
+                            <div class="d-flex align-items-center">
+                                <i class="fas fa-exclamation-triangle fa-2x text-warning me-3"></i>
+                                <div>
+                                    <h6 class="alert-heading mb-1 text-warning fw-bold">Content Strategy Framework</h6>
+                                    <p class="mb-1 small">These are <strong>template examples</strong> showing the type of student success stories to collect and create as part of our content strategy</p>
+                                    <p class="mb-0 small"><em><strong>Implementation:</strong> Use these frameworks to guide authentic alumni interviews and testimonial collection</em></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Template Examples -->
+                        <div class="row g-4">
+                            <div class="col-md-6">
+                                <div class="card border-success border-2 h-100">
+                                    <div class="card-header bg-success text-white">
+                                        <h6 class="mb-0">🎯 Template: Working Professional Success</h6>
+                                        <small>Framework for nursing/healthcare program testimonials</small>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-start mb-3">
+                                            <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
+                                                <i class="fas fa-heart-pulse fa-lg"></i>
+                                            </div>
+                                            <div>
+                                                <h6 class="text-success fw-bold mb-1">[Alumni Name], RN-to-BSN Graduate</h6>
+                                                <small class="text-muted">[Previous Role] → [New Role]</small>
+                                            </div>
+                                        </div>
+                                        <div class="bg-light p-3 rounded mb-3">
+                                            <p class="small mb-1"><strong>Template Elements:</strong></p>
+                                            <ul class="small mb-0">
+                                                <li>Work-life balance challenge</li>
+                                                <li>Program flexibility benefits</li>
+                                                <li>Specific career advancement</li>
+                                                <li>Quantified salary increase</li>
+                                                <li>Professional credibility gain</li>
+                                            </ul>
+                                        </div>
+                                        <div class="alert alert-success alert-sm p-2 mb-0">
+                                            <small><strong>Content Strategy:</strong> Target keywords "working nurse," "career advancement," "online RN to BSN"</small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card border-primary border-2 h-100">
+                                    <div class="card-header bg-primary text-white">
+                                        <h6 class="mb-0">🎯 Template: Barrier Removal Success</h6>
+                                        <small>Framework for business/MBA program testimonials</small>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-start mb-3">
+                                            <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
+                                                <i class="fas fa-chart-line fa-lg"></i>
+                                            </div>
+                                            <div>
+                                                <h6 class="text-primary fw-bold mb-1">[Alumni Name], MBA Graduate</h6>
+                                                <small class="text-muted">[Previous Role] → [New Role]</small>
+                                            </div>
+                                        </div>
+                                        <div class="bg-light p-3 rounded mb-3">
+                                            <p class="small mb-1"><strong>Template Elements:</strong></p>
+                                            <ul class="small mb-0">
+                                                <li>Elimination of barriers (No GMAT/GRE)</li>
+                                                <li>University credibility emphasis</li>
+                                                <li>Leadership advancement</li>
+                                                <li>Quantified impact/scope increase</li>
+                                                <li>Speed of career progression</li>
+                                            </ul>
+                                        </div>
+                                        <div class="alert alert-primary alert-sm p-2 mb-0">
+                                            <small><strong>Content Strategy:</strong> Target keywords "no GMAT," "working professional MBA," "career advancement"</small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Implementation Strategy -->
+                        <div class="mt-4">
+                            <h6 class="text-info fw-bold mb-3">📋 Authentic Collection Strategy</h6>
+                            <div class="row g-3">
+                                <div class="col-md-4">
+                                    <div class="card bg-light">
+                                        <div class="card-body p-3">
+                                            <h6 class="small fw-bold text-primary">1. Alumni Outreach</h6>
+                                            <ul class="small mb-0">
+                                                <li>Target recent graduates (2022-2024)</li>
+                                                <li>Focus on career advancement cases</li>
+                                                <li>15-20 minute phone interviews</li>
+                                                <li>Written consent forms required</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card bg-light">
+                                        <div class="card-body p-3">
+                                            <h6 class="small fw-bold text-success">2. Content Creation</h6>
+                                            <ul class="small mb-0">
+                                                <li>Use templates as interview guides</li>
+                                                <li>Video testimonials preferred</li>
+                                                <li>Multiple format derivatives</li>
+                                                <li>SEO-optimized quote extraction</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card bg-light">
+                                        <div class="card-body p-3">
+                                            <h6 class="small fw-bold text-warning">3. Strategic Distribution</h6>
+                                            <ul class="small mb-0">
+                                                <li>Program-specific landing pages</li>
+                                                <li>Social media campaigns</li>
+                                                <li>Email marketing content</li>
+                                                <li>Blog post integration</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -6221,7 +6299,7 @@
                                 <li class="mb-2">• <strong>157 Pages Analyzed:</strong> Complete UAGC online degree ecosystem</li>
                                 <li class="mb-2">• <strong>1,002 Search Terms:</strong> Every query generating clicks</li>
                                 <li class="mb-2">• <strong>Search Performance:</strong> Improved CTR and engagement</li>
-                                <li class="mb-2">• <strong>Student Stories:</strong> Composite examples based on alumni outcomes data</li>
+                                <li class="mb-2">• <strong>Content Templates:</strong> Strategic frameworks for authentic testimonial collection</li>
                             </ul>
                         </div>
                     </div>
