Strategic repositioning: Move Success Stories to top of Content Repurposing Matrix for optimal content flow and enhanced strategic context

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -2669,121 +2669,7 @@
                     </div>
                 </div>
 
-                <!-- Success Stories: Content Strategy Examples -->
-                <div class="alert alert-success border-0 shadow-sm mb-4">
-                    <div class="d-flex align-items-center">
-                        <i class="fas fa-user-graduate fa-2x text-success me-3"></i>
-                        <div>
-                            <h6 class="alert-heading mb-1 text-success fw-bold">Success Stories: Content Strategy Examples</h6>
-                            <p class="mb-1 small">Inspirational examples showing the type of authentic student stories we should collect and feature</p>
-                            <p class="mb-0 small"><em><strong>Note:</strong> These represent the caliber of success stories to actively collect from real alumni. Use as content strategy framework.</em></p>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Success Story Examples -->
-                <div class="row g-4 mb-4">
-                    <div class="col-md-6">
-                        <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
-                            <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(25,135,84,0.1) 0%, rgba(25,135,84,0.05) 100%);"></div>
-                            <div class="card-body position-relative">
-                                <div class="d-flex align-items-center mb-3">
-                                    <div class="rounded-circle bg-success bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
-                                        <i class="fas fa-user-nurse text-white fa-lg"></i>
-                                    </div>
-                                    <div>
-                                        <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
-                                        <small class="text-muted">Charge Nurse, Pediatric ICU</small>
-                                    </div>
-                                </div>
-                                <blockquote class="blockquote mb-3">
-                                    <p class="mb-0">"As a working nurse with a family, I needed flexibility. UAGC's online RN-to-BSN program let me advance my career without sacrificing time with my children. The supportive faculty and practical coursework prepared me for my new role as a charge nurse."</p>
-                                </blockquote>
-                                <div class="row text-center">
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-success">25%</div>
-                                        <div class="small text-muted">Salary Increase</div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-success">18mo</div>
-                                        <div class="small text-muted">Completion Time</div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-success">100%</div>
-                                        <div class="small text-muted">Online</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
-                            <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(13,110,253,0.1) 0%, rgba(13,110,253,0.05) 100%);"></div>
-                            <div class="card-body position-relative">
-                                <div class="d-flex align-items-center mb-3">
-                                    <div class="rounded-circle bg-primary bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
-                                        <i class="fas fa-user-tie text-white fa-lg"></i>
-                                    </div>
-                                    <div>
-                                        <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
-                                        <small class="text-muted">VP of Operations, Manufacturing</small>
-                                    </div>
-                                </div>
-                                <blockquote class="blockquote mb-3">
-                                    <p class="mb-0">"I was promoted to VP of Operations within 6 months of graduating from UAGC's MBA program. The no-GMAT requirement and evening classes made it possible for me to earn my degree while working full-time and managing a team."</p>
-                                </blockquote>
-                                <div class="row text-center">
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-primary">40%</div>
-                                        <div class="small text-muted">Salary Increase</div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-primary">24mo</div>
-                                        <div class="small text-muted">Completion Time</div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="small fw-bold text-primary">No GMAT</div>
-                                        <div class="small text-muted">Required</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Content Collection Strategy -->
-                <div class="alert alert-info border-0">
-                    <h6 class="text-info fw-bold mb-3">📋 Authentic Story Collection Framework</h6>
-                    <div class="row g-3">
-                        <div class="col-md-4">
-                            <div class="d-flex align-items-start">
-                                <i class="fas fa-phone-alt text-info me-2 mt-1"></i>
-                                <div>
-                                    <h6 class="small fw-bold mb-1">Alumni Outreach</h6>
-                                    <p class="small mb-0">Systematic follow-up with recent graduates for authentic career advancement stories</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="d-flex align-items-start">
-                                <i class="fas fa-video text-info me-2 mt-1"></i>
-                                <div>
-                                    <h6 class="small fw-bold mb-1">Professional Content</h6>
-                                    <p class="small mb-0">Video and written testimonials highlighting specific program benefits</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="d-flex align-items-start">
-                                <i class="fas fa-chart-line text-info me-2 mt-1"></i>
-                                <div>
-                                    <h6 class="small fw-bold mb-1">Strategic Distribution</h6>
-                                    <p class="small mb-0">Cross-platform placement across landing pages and marketing materials</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <!-- Content Format Guide -->
                 <div class="card-body p-0">
@@ -5134,6 +5020,122 @@
                     <small class="opacity-75">Human-centered content across the complete customer journey</small>
                 </div>
                 <div class="card-body">
+                    <!-- Success Stories: Content Strategy Examples -->
+                    <div class="alert alert-success border-0 shadow-sm mb-4">
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-user-graduate fa-2x text-success me-3"></i>
+                            <div>
+                                <h6 class="alert-heading mb-1 text-success fw-bold">Success Stories: Content Strategy Examples</h6>
+                                <p class="mb-1 small">Inspirational examples showing the type of authentic student stories we should collect and feature</p>
+                                <p class="mb-0 small"><em><strong>Note:</strong> These represent the caliber of success stories to actively collect from real alumni. Use as content strategy framework.</em></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Success Story Examples -->
+                    <div class="row g-4 mb-4">
+                        <div class="col-md-6">
+                            <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(25,135,84,0.1) 0%, rgba(25,135,84,0.05) 100%);"></div>
+                                <div class="card-body position-relative">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="rounded-circle bg-success bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
+                                            <i class="fas fa-user-nurse text-white fa-lg"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
+                                            <small class="text-muted">Charge Nurse, Pediatric ICU</small>
+                                        </div>
+                                    </div>
+                                    <blockquote class="blockquote mb-3">
+                                        <p class="mb-0">"As a working nurse with a family, I needed flexibility. UAGC's online RN-to-BSN program let me advance my career without sacrificing time with my children. The supportive faculty and practical coursework prepared me for my new role as a charge nurse."</p>
+                                    </blockquote>
+                                    <div class="row text-center">
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-success">25%</div>
+                                            <div class="small text-muted">Salary Increase</div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-success">18mo</div>
+                                            <div class="small text-muted">Completion Time</div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-success">100%</div>
+                                            <div class="small text-muted">Online</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
+                                <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(13,110,253,0.1) 0%, rgba(13,110,253,0.05) 100%);"></div>
+                                <div class="card-body position-relative">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="rounded-circle bg-primary bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
+                                            <i class="fas fa-user-tie text-white fa-lg"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
+                                            <small class="text-muted">VP of Operations, Manufacturing</small>
+                                        </div>
+                                    </div>
+                                    <blockquote class="blockquote mb-3">
+                                        <p class="mb-0">"I was promoted to VP of Operations within 6 months of graduating from UAGC's MBA program. The no-GMAT requirement and evening classes made it possible for me to earn my degree while working full-time and managing a team."</p>
+                                    </blockquote>
+                                    <div class="row text-center">
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-primary">40%</div>
+                                            <div class="small text-muted">Salary Increase</div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-primary">24mo</div>
+                                            <div class="small text-muted">Completion Time</div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="small fw-bold text-primary">No GMAT</div>
+                                            <div class="small text-muted">Required</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Content Collection Strategy -->
+                    <div class="alert alert-info border-0 mb-4">
+                        <h6 class="text-info fw-bold mb-3">📋 Authentic Story Collection Framework</h6>
+                        <div class="row g-3">
+                            <div class="col-md-4">
+                                <div class="d-flex align-items-start">
+                                    <i class="fas fa-phone-alt text-info me-2 mt-1"></i>
+                                    <div>
+                                        <h6 class="small fw-bold mb-1">Alumni Outreach</h6>
+                                        <p class="small mb-0">Systematic follow-up with recent graduates for authentic career advancement stories</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="d-flex align-items-start">
+                                    <i class="fas fa-video text-info me-2 mt-1"></i>
+                                    <div>
+                                        <h6 class="small fw-bold mb-1">Professional Content</h6>
+                                        <p class="small mb-0">Video and written testimonials highlighting specific program benefits</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="d-flex align-items-start">
+                                    <i class="fas fa-chart-line text-info me-2 mt-1"></i>
+                                    <div>
+                                        <h6 class="small fw-bold mb-1">Strategic Distribution</h6>
+                                        <p class="small mb-0">Cross-platform placement across landing pages and marketing materials</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="alert alert-info border-0 mb-4">
                         <div class="row align-items-center">
                             <div class="col-auto">
