Replace RN-to-BSN testimonial with Organizational Management
- Updated Sarah Chen from RN-to-BSN Graduate to Organizational Management Graduate
- Changed icon from fa-user-nurse to fa-chart-line
- Updated job title from Charge Nurse to Operations Manager
- Revised testimonial content to focus on leadership and management skills
- Adjusted metrics: 25% → 35% salary increase, 18mo → 24mo completion time
- Organizational Management has 14.89% CTR vs uncompetitive RN-to-BSN pricing

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -5125,23 +5125,23 @@
                                 <div class="card-body position-relative">
                                     <div class="d-flex align-items-center mb-3">
                                         <div class="rounded-circle bg-success bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
-                                            <i class="fas fa-user-nurse text-white fa-lg"></i>
+                                            <i class="fas fa-chart-line text-white fa-lg"></i>
                                         </div>
                                         <div>
-                                            <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
-                                            <small class="text-muted">Charge Nurse, Pediatric ICU</small>
+                                            <h6 class="text-success fw-bold mb-1">Sarah Chen, Organizational Management Graduate</h6>
+                                            <small class="text-muted">Operations Manager, Healthcare Systems</small>
                                         </div>
                                     </div>
                                     <blockquote class="blockquote mb-3">
-                                        <p class="mb-0">"As a working nurse with a family, I needed flexibility. UAGC's online RN-to-BSN program let me advance my career without sacrificing time with my children. The supportive faculty and practical coursework prepared me for my new role as a charge nurse."</p>
+                                        <p class="mb-0">"UAGC's Organizational Management program gave me the leadership skills I needed to advance from team lead to operations manager. The flexible online format and practical coursework in project management and team dynamics directly applied to my daily work challenges."</p>
                                     </blockquote>
                                     <div class="row text-center">
                                         <div class="col-4">
-                                            <div class="small fw-bold text-success">25%</div>
+                                            <div class="small fw-bold text-success">35%</div>
                                             <div class="small text-muted">Salary Increase</div>
                                         </div>
                                         <div class="col-4">
-                                            <div class="small fw-bold text-success">18mo</div>
+                                            <div class="small fw-bold text-success">24mo</div>
                                             <div class="small text-muted">Completion Time</div>
                                         </div>
                                         <div class="col-4">
